--- a/sass/modules/_home-example.scss
+++ b/sass/modules/_home-example.scss
@@ -1,9 +1,9 @@
-.home {
-
+.page-template-home-page {
+	
 	.wrapper-navbar {
 		nav {
 			background: #FFF !important;
-			padding: 1.5rem 20vh;
+			padding: 1.5rem 0;
 		}
 		a, .nav-link {
 			position: relative;
