--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,7 +20,7 @@ Tags:
 @import "assets/bootstrap4";
 @import "assets/font-awesome";
 @import "assets/owl-carousel";
-@import "assets/default";
+@import "assets/wordpress";
 
 /*--------------------------------------------------------------
 # Modules - Add modules
