--- a/css/style.css
+++ b/css/style.css
@@ -8014,6 +8014,22 @@ body:after {
 /*--------------------------------------------------------------
 # Theme - Add your styles in theme/theme.scss
 --------------------------------------------------------------*/
+nav {
+  width: 1199px; }
+  nav .mobile {
+    text-align: center; }
+    nav .mobile #main-menu {
+      display: inline-block !important;
+      text-align: center;
+      margin: 0 auto; }
+      nav .mobile #main-menu .nav-item {
+        margin-left: 3rem; }
+      nav .mobile #main-menu a {
+        font-weight: 900;
+        text-transform: uppercase;
+        font-size: 1.8rem;
+        color: #000; }
+
 /* 
 *	All your CSS & SASS can go here!
 *	Use the sass/themes folder as your personal sass directory!
