--- a/sass/style.scss
+++ b/sass/style.scss
@@ -35,6 +35,7 @@ Tags:
 /*--------------------------------------------------------------
 # Theme - Add your styles in theme/theme.scss
 --------------------------------------------------------------*/
+@import "theme/headers/headers";
 @import "theme/theme_variables";
 @import "theme/theme";
 
