--- a/css/style.css
+++ b/css/style.css
@@ -8014,6 +8014,12 @@ body:after {
 /*--------------------------------------------------------------
 # Theme - Add your styles in theme/theme.scss
 --------------------------------------------------------------*/
+.header-logo {
+  display: inline-block;
+  padding: 40px;
+  text-align: center;
+  width: 100%; }
+
 nav {
   width: 1199px; }
   nav .mobile {
