--- a/sass/theme/headers/_aardvark.scss
+++ b/sass/theme/headers/_aardvark.scss
@@ -1,3 +1,11 @@
+.header-logo {
+    display: inline-block;
+    padding: 40px;
+    text-align: center;
+    width: 100%;
+}
+
+
 nav {
 	width: 1199px;
 	.mobile {
