updated header scss

--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -10,6 +10,9 @@ $brand-second:		#F1B20E;
 $brand-third:		#4B18A4;
 $brand-fourth:		#106C98;
 
+$dark:				#222222;
+$light:				#EFEFEF;
+
 $font-one:		'Raleway', sans-serif;
 $font-two:		'Cutive', serif;
 
