--- a/css/style.css
+++ b/css/style.css
@@ -8105,28 +8105,73 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn; }
 
-.wrapper-navbar .head__contact {
-  background-color: #106C98;
-  color: #FFF;
-  padding: 15px 0;
-  font-weight: bold; }
-  .wrapper-navbar .head__contact p {
-    margin: 0; }
-
-.wrapper-navbar .head__address {
-  background-color: #F1B20E;
-  padding: 10px 0; }
-
-.wrapper-navbar .head__icons {
-  position: absolute;
-  bottom: -24px;
-  width: 100%;
-  background: transparent; }
-  .wrapper-navbar .head__icons .head__icon {
-    background-color: #4B18A4;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    color: #FFF; }
+.wrapper-navbar {
+  text-align: center; }
+  .wrapper-navbar .navbar-header .navbar-toggler {
+    min-width: 200px;
+    text-align: center;
+    background: none; }
+  .wrapper-navbar .head__contact {
+    background-color: #106C98;
+    color: #FFF;
+    padding: 15px 0;
+    font-weight: bold; }
+    .wrapper-navbar .head__contact p {
+      margin: 0; }
+    .wrapper-navbar .head__contact a {
+      color: #F1B20E; }
+    .wrapper-navbar .head__contact span {
+      padding-left: 15px; }
+  .wrapper-navbar .header__logo img {
+    max-height: 180px; }
+  .wrapper-navbar .head__address {
+    background-color: #F1B20E;
+    padding: 10px 0; }
+  .wrapper-navbar .head__icons {
+    position: absolute;
+    bottom: -24px;
+    width: 100%;
+    background: transparent; }
+    .wrapper-navbar .head__icons .head__icon {
+      background-color: #4B18A4;
+      border-bottom-right-radius: 10px;
+      border-bottom-left-radius: 10px;
+      color: #FFF; }
+  .wrapper-navbar .mobile #main-menu > .nav-item > .nav-link {
+    text-transform: uppercase; }
+  @media (min-width: 1200px) {
+    .wrapper-navbar .mobile {
+      display: inline-block !important; } }
+  .wrapper-navbar .nav-item.current_page_item a {
+    font-weight: 900 !important; }
+  .wrapper-navbar .navbar-nav > .nav-item + .nav-item {
+    margin-left: 40px; }
+    .wrapper-navbar .navbar-nav > .nav-item + .nav-item a {
+      font-weight: 400; }
+  .wrapper-navbar .navbar-light .navbar-nav .nav-link {
+    color: #222222; }
+  .wrapper-navbar .dropdown-menu {
+    margin: 12px 0 0;
+    padding: 0;
+    padding-top: 10px;
+    background-color: #f7f7f9;
+    border: none;
+    border-radius: 0;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    text-align: left;
+    min-width: 220px; }
+    .wrapper-navbar .dropdown-menu .nav-item {
+      width: 100%;
+      padding-left: 30px; }
+      .wrapper-navbar .dropdown-menu .nav-item:hover {
+        background-color: #106C98;
+        -webkit-transition: background-color 0.5s;
+        transition: background-color 0.5s; }
+        .wrapper-navbar .dropdown-menu .nav-item:hover a {
+          color: #EFEFEF; }
+    .wrapper-navbar .dropdown-menu .nav-item + .nav-item {
+      margin-left: 0; }
 
 .carousel-inner .shadow {
   position: absolute;
