new hover effect homepage boxes

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,7 +27,7 @@ Tags:
 --------------------------------------------------------------*/
 @import "modules/masonry";
 @import "modules/filter";
-//@import "modules/lightbox";
+@import "modules/lightbox";
 @import "modules/parallax";
 @import "modules/home-example";
 
