--- a/css/style.css
+++ b/css/style.css
@@ -7761,6 +7761,183 @@ textarea:focus::-moz-placeholder {
       background-size: cover;
       background-position: center; }
 
+/* Preload images */
+body:after {
+  content: url(../images/close.png) url(../images/loading.gif) url(../images/prev.png) url(../images/next.png);
+  display: none; }
+
+.lightboxOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  background-color: black;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  opacity: 0.8;
+  display: none; }
+
+.lightbox {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  z-index: 10000;
+  text-align: center;
+  line-height: 0;
+  font-weight: normal; }
+
+.lightbox .lb-image {
+  display: block;
+  height: auto;
+  max-width: inherit;
+  border-radius: 3px; }
+
+.lightbox a img {
+  border: none; }
+
+.lb-outerContainer {
+  position: relative;
+  background-color: white;
+  *zoom: 1;
+  width: 250px;
+  height: 250px;
+  margin: 0 auto;
+  border-radius: 4px; }
+
+.lb-outerContainer:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.lb-container {
+  padding: 4px; }
+
+.lb-loader {
+  position: absolute;
+  top: 43%;
+  left: 0;
+  height: 25%;
+  width: 100%;
+  text-align: center;
+  line-height: 0; }
+
+.lb-cancel {
+  display: block;
+  width: 32px;
+  height: 32px;
+  margin: 0 auto;
+  background: url(../node_modules/lightbox2/dist/images/loading.gif) no-repeat; }
+
+.lb-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10; }
+
+.lb-container > .nav {
+  left: 0; }
+
+.lb-nav a {
+  outline: none;
+  background-image: url("data:image/gif;base64,R0lGODlhAQABAPAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="); }
+
+.lb-prev, .lb-next {
+  height: 100%;
+  cursor: pointer;
+  display: block; }
+
+.lb-nav a.lb-prev {
+  width: 34%;
+  left: 0;
+  float: left;
+  background: url(../node_modules/lightbox2/dist/images/prev.png) left 48% no-repeat;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -webkit-transition: opacity 0.6s;
+  -moz-transition: opacity 0.6s;
+  -o-transition: opacity 0.6s;
+  transition: opacity 0.6s; }
+
+.lb-nav a.lb-prev:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1; }
+
+.lb-nav a.lb-next {
+  width: 64%;
+  right: 0;
+  float: right;
+  background: url(../node_modules/lightbox2/dist/images/next.png) right 48% no-repeat;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
+  opacity: 0;
+  -webkit-transition: opacity 0.6s;
+  -moz-transition: opacity 0.6s;
+  -o-transition: opacity 0.6s;
+  transition: opacity 0.6s; }
+
+.lb-nav a.lb-next:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1; }
+
+.lb-dataContainer {
+  margin: 0 auto;
+  padding-top: 5px;
+  *zoom: 1;
+  width: 100%;
+  -moz-border-radius-bottomleft: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  -moz-border-radius-bottomright: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  border-bottom-right-radius: 4px; }
+
+.lb-dataContainer:after {
+  content: "";
+  display: table;
+  clear: both; }
+
+.lb-data {
+  padding: 0 4px;
+  color: #ccc; }
+
+.lb-data .lb-details {
+  width: 85%;
+  float: left;
+  text-align: left;
+  line-height: 1.1em; }
+
+.lb-data .lb-caption {
+  font-size: 13px;
+  font-weight: bold;
+  line-height: 1em; }
+
+.lb-data .lb-number {
+  display: block;
+  clear: left;
+  padding-bottom: 1em;
+  font-size: 12px;
+  color: #999999; }
+
+.lb-data .lb-close {
+  display: block;
+  float: right;
+  width: 30px;
+  height: 30px;
+  background: url(../node_modules/lightbox2/dist/images/close.png) top right no-repeat;
+  text-align: right;
+  outline: none;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+  opacity: 0.7;
+  -webkit-transition: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  transition: opacity 0.2s; }
+
+.lb-data .lb-close:hover {
+  cursor: pointer;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1; }
+
 .parallax-window {
   min-height: 400px;
   background: transparent; }
@@ -7884,17 +8061,41 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%; }
 
 /* Home */
+.wtp__full-boxes [class*="col"] {
+  padding: 0; }
+
 .wtp__full-boxes .box {
   position: relative;
-  height: 200px;
-  margin-bottom: 20px;
+  height: 210px;
+  margin: 0;
   background-color: #ececec;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100%;
-  transition: all 0.2s ease-in-out; }
+  background-size: cover;
+  transition: all 0.2s ease-in-out;
+  overflow: hidden; }
+  .wtp__full-boxes .box i {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    font-size: 54px;
+    opacity: 0;
+    color: #FFF;
+    z-index: 99;
+    transition: all 0.2s ease-in-out; }
+  .wtp__full-boxes .box .bg-img {
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    transition: all 0.2s ease-in-out; }
   .wtp__full-boxes .box .gradient {
     position: absolute;
+    top: 0;
     background: linear-gradient(to bottom, transparent 0, transparent 70%, rgba(0, 0, 0, 0.5) 100%);
     height: 100%;
     width: 100%;
@@ -7912,15 +8113,27 @@ h1, h2, h3, h4, h5, h6 {
     position: absolute;
     font: bold 20px/24px "Cutive", serif;
     color: #FFF;
-    bottom: 10px;
-    left: 20px;
-    z-index: 3; }
-  .wtp__full-boxes .box:hover {
-    background-size: 110%;
+    bottom: 5px;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    opacity: 1;
+    z-index: 3;
+    transition: all 0.1s ease-in-out; }
+  .wtp__full-boxes .box:hover i {
+    top: 40%;
+    opacity: 1;
+    transition: opacity 1s, top 0.2s; }
+  .wtp__full-boxes .box:hover .bg-img {
+    transform: scale(1.1);
     transition: all 0.2s ease-in-out; }
-    .wtp__full-boxes .box:hover .shadow {
-      background: transparent;
-      transition: all 0.2s ease-in-out; }
+  .wtp__full-boxes .box:hover .shadow {
+    background: rgba(241, 178, 14, 0.85);
+    transition: all 0.2s ease-in-out; }
+  .wtp__full-boxes .box:hover .title {
+    opacity: 0;
+    margin-bottom: -10px;
+    transition: all 0.4s ease-in-out; }
 
 .wtp__full-boxes .box--tall {
   height: 325px; }
@@ -7929,7 +8142,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 420px;
   background: #222;
   color: #FFF;
-  padding: 40px 60px; }
+  padding: 25px 30px; }
   .wtp__full-boxes .box--desc .box--desc__title {
     font: 100 45px/45px "Raleway", sans-serif;
     margin-bottom: 25px; }
