--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -30,18 +30,47 @@ h1,h2,h3,h4,h5,h6 {
 
 .wtp__full-boxes {
 
+	[class*="col"]{
+		padding: 0;
+	}
+
 	.box {
 		position: relative;
-		height: 200px;
-		margin-bottom: 20px;
+		height: 210px;
+		margin: 0;
 		background-color: #ececec;
 		background-position: center;
 		background-repeat: no-repeat;
-		background-size: 100%;
+		background-size: cover;
 		transition: all 0.2s ease-in-out;
+		overflow: hidden;
+
+		i {
+		    position: absolute;
+		    top: 100%;
+		    left: 0;
+		    width: 100%;
+		    margin: auto;
+		    text-align: center;
+		    font-size: 54px;
+		    opacity: 0;
+		    color: #FFF;
+		    z-index: 99;
+			transition: all 0.2s ease-in-out;
+		}
+
+		.bg-img {
+			background-position: center;
+		  	background-size: cover;
+		  	width: 100%;
+		  	height: 100%;
+		  	z-index: -1;
+			transition: all 0.2s ease-in-out;
+		}
 
 		.gradient {
 			position: absolute;
+			top: 0;
 			background: linear-gradient(to bottom,transparent 0,transparent 70%,rgba(0,0,0,.5) 100%);
 		    height: 100%;
 		    width: 100%;
@@ -63,17 +92,33 @@ h1,h2,h3,h4,h5,h6 {
 			position: absolute;
 			font: bold 20px/24px $font-two;
 			color: #FFF;
-			bottom: 10px;
-			left: 20px;
+			bottom: 5px;
+			left: 0;
+			width: 100%;
+			text-align: center;
+			opacity: 1;
 			z-index: 3;
+			transition: all 0.1s ease-in-out;
 		}
 
 		&:hover {
-			background-size: 110%;
-			transition: all 0.2s ease-in-out;
-			.shadow {
-				background: transparent;
+			i {
+		    	top: 40%;
+				opacity: 1;
+				transition: opacity 1s, top 0.2s ;
+			}
+			.bg-img {
+				transform: scale(1.1);
 				transition: all 0.2s ease-in-out;
+			}
+			.shadow {
+				background: rgba(241, 178, 14,0.85);
+				transition: all 0.2s ease-in-out;
+			}
+			.title {
+				opacity: 0;
+				margin-bottom: -10px;
+				transition: all 0.4s ease-in-out;
 			}
 		}
 	}
@@ -86,7 +131,7 @@ h1,h2,h3,h4,h5,h6 {
 		height: 420px;
 		background: #222;
 		color: #FFF;
-		padding: 40px 60px;
+		padding:25px 30px;
 
 		.box--desc__title {
 			font: 100 45px/45px $font-one;
