--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -6,7 +6,7 @@
 // Just add your color code here, compile the theme.scss file to change this color everywhere
 
 $brand-primary:     #941134; //#ff6d5a
-$brand-second:		#F1B20E;
+$brand-second:		#F1B20E; // rgb(241, 178, 14)
 $brand-third:		#4B18A4;
 $brand-fourth:		#106C98;
 
