--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -5,9 +5,9 @@
 // Thats the ugly Bootstrap blue used for all the links, primary buttons etc.
 // Just add your color code here, compile the theme.scss file to change this color everywhere
 
-$brand-primary:     #941134; //#ff6d5a
+$brand-primary:     #941134; //rgb(148, 17, 52)
 $brand-second:		#F1B20E; // rgb(241, 178, 14)
-$brand-third:		#4B18A4;
+$brand-third:		#4B18A4; //rgb(16, 108, 152)
 $brand-fourth:		#106C98;
 
 $dark:				#222222;
