--- a/css/style.css
+++ b/css/style.css
@@ -7763,7 +7763,7 @@ textarea:focus::-moz-placeholder {
 
 /* Preload images */
 body:after {
-  content: url(../images/close.png) url(../images/loading.gif) url(../images/prev.png) url(../images/next.png);
+  content: url(../node_modules/lightbox2/dist/images/close.png) url(../node_modules/lightbox2/dist/images/loading.gif) url(../node_modules/lightbox2/dist/images/prev.png) url(../node_modules/lightbox2/dist/images/next.png);
   display: none; }
 
 .lightboxOverlay {
@@ -8061,10 +8061,34 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%; }
 
 /* Home */
-.wtp__full-boxes [class*="col"] {
+.welcome .wtp__full-boxes .wtp--padding {
+  padding-right: 15px !important; }
+
+.welcome .wtp__full-boxes a.box {
+  position: relative; }
+  .welcome .wtp__full-boxes a.box .title {
+    position: absolute;
+    top: 25%;
+    left: 0;
+    width: 100%;
+    color: #FFF;
+    font-size: 1.8rem;
+    line-height: 2.6rem;
+    opacity: 1;
+    transition: all 0.2s ease-in-out; }
+  .welcome .wtp__full-boxes a.box .shadow {
+    background: rgba(16, 108, 152, 0.8); }
+  .welcome .wtp__full-boxes a.box:hover .title {
+    opacity: 0;
+    transition: all 0.2s ease-in-out; }
+  .welcome .wtp__full-boxes a.box:hover .shadow {
+    background: rgba(16, 108, 152, 0.2); }
+
+.welcome [class*="col"] {
   padding: 0; }
 
-.wtp__full-boxes .box {
+.welcome a.box {
+  display: block;
   position: relative;
   height: 210px;
   margin: 0;
@@ -8074,7 +8098,7 @@ h1, h2, h3, h4, h5, h6 {
   background-size: cover;
   transition: all 0.2s ease-in-out;
   overflow: hidden; }
-  .wtp__full-boxes .box i {
+  .welcome a.box i {
     position: absolute;
     top: 100%;
     left: 0;
@@ -8086,21 +8110,21 @@ h1, h2, h3, h4, h5, h6 {
     color: #FFF;
     z-index: 99;
     transition: all 0.2s ease-in-out; }
-  .wtp__full-boxes .box .bg-img {
+  .welcome a.box .bg-img {
     background-position: center;
     background-size: cover;
     width: 100%;
     height: 100%;
     z-index: -1;
     transition: all 0.2s ease-in-out; }
-  .wtp__full-boxes .box .gradient {
+  .welcome a.box .gradient {
     position: absolute;
     top: 0;
     background: linear-gradient(to bottom, transparent 0, transparent 70%, rgba(0, 0, 0, 0.5) 100%);
     height: 100%;
     width: 100%;
     z-index: 2; }
-  .wtp__full-boxes .box .shadow {
+  .welcome a.box .shadow {
     position: absolute;
     background: rgba(0, 0, 0, 0.2);
     top: 0;
@@ -8109,81 +8133,81 @@ h1, h2, h3, h4, h5, h6 {
     right: 0;
     z-index: 1;
     transition: all 0.2s ease-in-out; }
-  .wtp__full-boxes .box .title {
+  .welcome a.box .title {
     position: absolute;
     font: bold 20px/24px "Cutive", serif;
     color: #FFF;
-    bottom: 5px;
+    bottom: 40%;
     left: 0;
     width: 100%;
     text-align: center;
     opacity: 1;
     z-index: 3;
     transition: all 0.1s ease-in-out; }
-  .wtp__full-boxes .box:hover i {
+  .welcome a.box:hover i {
     top: 40%;
     opacity: 1;
     transition: opacity 1s, top 0.2s; }
-  .wtp__full-boxes .box:hover .bg-img {
+  .welcome a.box:hover .bg-img {
     transform: scale(1.1);
     transition: all 0.2s ease-in-out; }
-  .wtp__full-boxes .box:hover .shadow {
+  .welcome a.box:hover .shadow {
     background: rgba(241, 178, 14, 0.85);
     transition: all 0.2s ease-in-out; }
-  .wtp__full-boxes .box:hover .title {
+  .welcome a.box:hover .title {
     opacity: 0;
     margin-bottom: -10px;
     transition: all 0.4s ease-in-out; }
 
-.wtp__full-boxes .box--tall {
+.welcome a.box--tall {
   height: 325px; }
 
-.wtp__full-boxes .box--desc {
-  height: 420px;
+.welcome a.box--desc {
+  height: 420px !important;
   background: #222;
   color: #FFF;
-  padding: 25px 30px; }
-  .wtp__full-boxes .box--desc .box--desc__title {
-    font: 100 45px/45px "Raleway", sans-serif;
-    margin-bottom: 25px; }
+  padding: 35px 30px; }
+  .welcome a.box--desc .box--desc__title {
+    font: 100 52px/50px "Raleway", sans-serif;
+    margin-bottom: 50px; }
 
-.wtp__full-boxes .box--upcoming {
+.welcome .box--upcoming {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/14445026_1216046245105621_3306610808690776345_o.jpg); }
 
-.wtp__full-boxes .box--youtube {
+.welcome .box--youtube {
   background-image: url(); }
 
-.wtp__full-boxes .box--toys {
+.welcome .box--toys {
   background-image: url(/wp-content/uploads/2016/12/IMG_0770-1.jpg); }
 
-.wtp__full-boxes .box--play {
+.welcome .box--play {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/10357639_746169108760006_3475882466858522686_o.jpg); }
 
-.wtp__full-boxes .box--mini {
+.welcome .box--mini {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/10333777_736341299742787_1396436187858928254_o.jpg); }
 
-.wtp__full-boxes .box--camp {
+.welcome .box--camp {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/26.jpg); }
 
-.wtp__full-boxes .box--hiking {
+.welcome .box--hiking {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/12080222_988062094570705_1048278132340532445_o.jpg); }
 
-.wtp__full-boxes .box--amen {
+.welcome .box--amen {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/554316_408124662564454_1853705012_n.jpg); }
 
-.wtp__full-boxes .box--bag {
+.welcome .box--bag {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/481262_408126025897651_211010353_n.jpg); }
 
-.wtp__full-boxes .box--paint {
+.welcome .box--paint {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/479702_408126822564238_590652088_n.jpg); }
 
-.wtp__full-boxes .box--pool {
+.welcome .box--pool {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/547529_408142449229342_1533011197_n.jpg); }
 
-.wtp__full-boxes .box--near {
+.welcome .box--near {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/monticello.jpg); }
 
-.wtp__full-boxes .box--camp2 {
+.welcome .box--camp2 {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/255146_203987516311504_746475_n.jpg); }
 
 .pw--home-testi {
