--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -28,13 +28,51 @@ h1,h2,h3,h4,h5,h6 {
 
 /* Home */
 
-.wtp__full-boxes {
+.welcome {
+
+	.wtp__full-boxes {
+
+		.wtp--padding {
+			padding-right: 15px !important;
+		}
+
+		a.box {
+			position: relative;
+
+			.title {
+				position: absolute;
+				top: 25%;
+				left: 0;
+				width: 100%;
+				color: #FFF;
+				font-size: 1.8rem;
+				line-height: 2.6rem;
+				opacity: 1;
+				transition: all 0.2s ease-in-out;
+			}
+
+			.shadow {
+				background: rgba(16, 108, 152, 0.8);
+			}
+
+			&:hover{
+				.title {
+					opacity: 0;
+					transition: all 0.2s ease-in-out;
+				}
+				.shadow {
+					background: rgba(16, 108, 152, 0.2);
+				}
+			}
+		}
+	}
 
 	[class*="col"]{
 		padding: 0;
 	}
 
-	.box {
+	a.box {
+		display: block;
 		position: relative;
 		height: 210px;
 		margin: 0;
@@ -92,7 +130,7 @@ h1,h2,h3,h4,h5,h6 {
 			position: absolute;
 			font: bold 20px/24px $font-two;
 			color: #FFF;
-			bottom: 5px;
+			bottom: 40%;
 			left: 0;
 			width: 100%;
 			text-align: center;
@@ -123,19 +161,19 @@ h1,h2,h3,h4,h5,h6 {
 		}
 	}
 
-	.box--tall {
+	a.box--tall {
 		height: 325px;
 	}
 	
-	.box--desc { 
-		height: 420px;
+	a.box--desc {
+		height: 420px !important;
 		background: #222;
 		color: #FFF;
-		padding:25px 30px;
+		padding:35px 30px;
 
 		.box--desc__title {
-			font: 100 45px/45px $font-one;
-			margin-bottom: 25px;
+			font: 100 52px/50px $font-one;
+			margin-bottom: 50px;
 		}
 
 	}
