--- a/sass/theme/_theme_variables.scss
+++ b/sass/theme/_theme_variables.scss
@@ -7,8 +7,8 @@
 
 $brand-primary:     #941134; //rgb(148, 17, 52)
 $brand-second:		#F1B20E; // rgb(241, 178, 14)
-$brand-third:		#4B18A4; //rgb(16, 108, 152)
-$brand-fourth:		#106C98;
+$brand-third:		#4B18A4; 
+$brand-fourth:		#106C98; //rgb(16, 108, 152)
 
 $dark:				#222222;
 $light:				#EFEFEF;
