--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -28,13 +28,26 @@ h1,h2,h3,h4,h5,h6 {
 
 /* Home */
 
+.bg-shape {	
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	z-index: -1;
+}
+
 .welcome {
 
-	.wtp__full-boxes {
+	.wtp__boxes {
 
-		.wtp--padding {
-			padding-right: 15px !important;
+		.wtp_box--blue {
+			.shadow {
+				background: rgba(16, 108, 152,0.9) !important;
+			}
 		}
+
+		.wtp--padding { padding-right: 15px !important;	}
+		.wtp--padding--left { padding-left: 15px; }
 
 		a.box {
 			position: relative;
@@ -52,7 +65,7 @@ h1,h2,h3,h4,h5,h6 {
 			}
 
 			.shadow {
-				background: rgba(16, 108, 152, 0.8);
+				background: rgba(148, 17, 52,0.9);
 			}
 
 			&:hover{
@@ -61,7 +74,7 @@ h1,h2,h3,h4,h5,h6 {
 					transition: all 0.2s ease-in-out;
 				}
 				.shadow {
-					background: rgba(16, 108, 152, 0.2);
+					background: rgba(148, 17, 52,0.25);
 				}
 			}
 		}
@@ -84,25 +97,25 @@ h1,h2,h3,h4,h5,h6 {
 		overflow: hidden;
 
 		i {
-		    position: absolute;
-		    top: 100%;
-		    left: 0;
-		    width: 100%;
-		    margin: auto;
-		    text-align: center;
-		    font-size: 54px;
-		    opacity: 0;
-		    color: #FFF;
-		    z-index: 99;
+			position: absolute;
+			top: 100%;
+			left: 0;
+			width: 100%;
+			margin: auto;
+			text-align: center;
+			font-size: 54px;
+			opacity: 0;
+			color: #FFF;
+			z-index: 99;
 			transition: all 0.2s ease-in-out;
 		}
 
 		.bg-img {
 			background-position: center;
-		  	background-size: cover;
-		  	width: 100%;
-		  	height: 100%;
-		  	z-index: -1;
+			background-size: cover;
+			width: 100%;
+			height: 100%;
+			z-index: -1;
 			transition: all 0.2s ease-in-out;
 		}
 
@@ -110,9 +123,9 @@ h1,h2,h3,h4,h5,h6 {
 			position: absolute;
 			top: 0;
 			background: linear-gradient(to bottom,transparent 0,transparent 70%,rgba(0,0,0,.5) 100%);
-		    height: 100%;
-		    width: 100%;
-		    z-index: 2;
+			height: 100%;
+			width: 100%;
+			z-index: 2;
 		}
 
 		.shadow {
@@ -141,7 +154,7 @@ h1,h2,h3,h4,h5,h6 {
 
 		&:hover {
 			i {
-		    	top: 40%;
+				top: 40%;
 				opacity: 1;
 				transition: opacity 1s, top 0.2s ;
 			}
@@ -150,7 +163,7 @@ h1,h2,h3,h4,h5,h6 {
 				transition: all 0.2s ease-in-out;
 			}
 			.shadow {
-				background: rgba(241, 178, 14,0.85);
+				background: rgba(241, 178, 14,0.95);
 				transition: all 0.2s ease-in-out;
 			}
 			.title {
@@ -167,12 +180,12 @@ h1,h2,h3,h4,h5,h6 {
 	
 	a.box--desc {
 		height: 420px !important;
-		background: #222;
+		background: $brand-second;
 		color: #FFF;
-		padding:35px 30px;
+		padding:45px 30px;
 
 		.box--desc__title {
-			font: 100 52px/50px $font-one;
+			font: 100 55px/50px $font-one;
 			margin-bottom: 50px;
 		}
 
@@ -207,4 +220,72 @@ h1,h2,h3,h4,h5,h6 {
 		font: normal 22px/30px $font-one;
 		color: #FFF;
 	}
+}
+
+
+.service-boxes {
+	text-align: center;
+	
+	.service-box {
+		display: inline-block;
+		text-align: center;
+		padding: 40px;
+
+		.service-icon {
+			a {
+				text-decoration: none;
+			}
+
+			i {
+				display: inline-block;
+				font-size: 45px;
+				line-height: 60px;
+				color: rgb(95, 98, 115);
+				transition: all 0.5s ease;
+				-webkit-transition: all 0.6s ease;
+				-moz-transition: all 0.6s ease;
+				-o-transition: all 0.6s ease;
+				transition: all 0.6s ease;
+			}
+			 h4 {
+
+				color: rgb(95, 98, 115);
+				font-size: 23px;
+				padding: 25px 0 5px;
+				-webkit-transition: all 0.6s ease;
+				-moz-transition: all 0.6s ease;
+				-o-transition: all 0.6s ease;
+				transition: all 0.6s ease;
+			}
+			p {
+				font-size: 15px;
+				line-height: 26px;
+			}
+		}
+		&:hover {
+
+			background: #941134;
+			
+			.service-icon{				
+				i {
+					transition: all 0.5s ease;
+					color:#FFFFFF;
+					font-size: 54px;
+					line-height: 60px;
+					-webkit-transform: rotateY(360deg);
+					-ms-transform: rotateY(360deg);
+					transform: rotateY(360deg);
+				}
+				h4 {
+					transition: color 0.5s ease;
+					color: #FFFFFF;
+				}
+			}
+		}
+	}
+}
+
+.service-box:hover{
+	transition: background-color 0.5s ease;
+	background-color:rgb(95, 98, 115);
 }
