--- a/css/style.css
+++ b/css/style.css
@@ -8181,6 +8181,23 @@ h1, h2, h3, h4, h5, h6 {
     font: 100 55px/50px "Raleway", sans-serif;
     margin-bottom: 50px; }
 
+.welcome a.box--video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1; }
+
+.welcome a.box--video i {
+  opacity: 1;
+  top: 40%; }
+
+.welcome a.box--video:focus i, .welcome a.box--video:active i, .welcome a.box--video:visited i {
+  opacity: 0;
+  z-index: -1; }
+
+.welcome a.box--video:focus .shadow, .welcome a.box--video:active .shadow, .welcome a.box--video:visited .shadow {
+  z-index: -1; }
+
 .welcome .box--upcoming {
   background-image: url(http://cycat4.com/wp-content/uploads/2016/12/14445026_1216046245105621_3306610808690776345_o.jpg); }
 
@@ -8536,6 +8553,8 @@ h1, h2, h3, h4, h5, h6 {
       background: center center/cover no-repeat;
       height: 45%;
       padding: 0; }
+    .blog--home article .date {
+      color: #941134; }
     .blog--home article .blog__detail {
       height: 55%;
       border: none;
