created blog slider home page

--- a/css/style.css
+++ b/css/style.css
@@ -8541,22 +8541,35 @@ h1, h2, h3, h4, h5, h6 {
     color: #FFF;
     z-index: 3; }
 
-.blog--home {
+.blog--home article {
+  height: 450px;
+  background: #FFF; }
+  .blog--home article .blog__img {
+    display: block;
+    background: center center/cover no-repeat;
+    height: 45%;
+    padding: 0; }
+  .blog--home article .date {
+    color: #941134; }
+  .blog--home article .blog__detail {
+    height: 55%;
+    border: none;
+    border-right: 1px solid #ccc;
+    padding: 30px; }
+
+.blog--home #owc-home--blog .owl-stage-outer {
   border: 1px solid #ccc;
   border-top: none;
   border-right: none; }
-  .blog--home article {
-    height: 450px;
-    background: #FFF; }
-    .blog--home article .blog__img {
-      display: block;
-      background: center center/cover no-repeat;
-      height: 45%;
-      padding: 0; }
-    .blog--home article .date {
-      color: #941134; }
-    .blog--home article .blog__detail {
-      height: 55%;
-      border: none;
-      border-right: 1px solid #ccc;
-      padding: 30px; }
+
+.blog--home #owc-home--blog .owl-nav {
+  width: 100%;
+  margin: 10px auto 0; }
+  .blog--home #owc-home--blog .owl-nav div {
+    background: none;
+    font-size: 60px;
+    color: #F1B20E; }
+
+.blog--home #owc-home--blog .owl-nav.disabled,
+.blog--home #owc-home--blog .owl-dots.disabled {
+  display: inline-block !important; }
