--- a/sass/theme/_blog.scss
+++ b/sass/theme/_blog.scss
@@ -1,8 +1,5 @@
 .blog--home {
 
-    border: 1px solid #ccc;
-    border-top: none;
-    border-right: none;
 
 	article {
 		height: 450px;
@@ -24,6 +21,30 @@
 		    border: none;
 		    border-right: 1px solid #ccc;
 		    padding: 30px;
+		}
+	}
+
+	#owc-home--blog {
+
+		.owl-stage-outer {
+		    border: 1px solid #ccc;
+		    border-top: none;
+		    border-right: none;			
+		}
+
+		.owl-nav {
+			width: 100%;
+			margin: 10px auto 0;
+			div {
+				background: none;
+				font-size: 60px;
+				color: $brand-second;
+			}
+		}
+
+		.owl-nav.disabled, 
+		.owl-dots.disabled {
+			display: inline-block !important;
 		}
 	}
 }
