--- a/css/style.css
+++ b/css/style.css
@@ -7534,9 +7534,6 @@ textarea:focus::-moz-placeholder {
 
 /* FF 19+ */
 /* Site footer */
-.site-footer {
-  padding: 40px 0; }
-
 .site-footer ul,
 .site-footer ol {
   list-style-type: none;
@@ -8451,7 +8448,7 @@ h1, h2, h3, h4, h5, h6 {
   @media (min-width: 1200px) {
     .wrapper-navbar .mobile {
       display: inline-block !important; } }
-  .wrapper-navbar .nav-item.current_page_item a {
+  .wrapper-navbar .current_page_item > a {
     font-weight: 900 !important; }
   .wrapper-navbar .navbar-nav > .nav-item + .nav-item {
     margin-left: 40px; }
