--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -37,21 +37,17 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .welcome {
-
 	.wtp__boxes {
-
+		.wtp--padding { 
+			padding-right: 2px !important;	
+		}
 		.wtp_box--blue {
 			.shadow {
-				background: rgba(16, 108, 152,0.9) !important;
+				background: rgba(16, 108, 152,0.5) !important;
 			}
 		}
-
-		.wtp--padding { padding-right: 15px !important;	}
-		.wtp--padding--left { padding-left: 15px; }
-
 		a.box {
 			position: relative;
-
 			.title {
 				position: absolute;
 				top: 25%;
@@ -63,11 +59,9 @@ h1,h2,h3,h4,h5,h6 {
 				opacity: 1;
 				transition: all 0.2s ease-in-out;
 			}
-
 			.shadow {
 				background: rgba(148, 17, 52,0.9);
 			}
-
 			&:hover{
 				.title {
 					opacity: 0;
@@ -87,8 +81,10 @@ h1,h2,h3,h4,h5,h6 {
 	a.box {
 		display: block;
 		position: relative;
-		height: 210px;
+		height: 205px;
 		margin: 0;
+		margin-left: 10px;
+		margin-bottom: 10px;
 		background-color: #ececec;
 		background-position: center;
 		background-repeat: no-repeat;
@@ -179,7 +175,7 @@ h1,h2,h3,h4,h5,h6 {
 	a.box--desc {
 		height: 420px !important;
 		background: $brand-second;
-		color: #FFF;
+		color: #FFF !important;
 		padding:45px 30px;
 		.box--desc__title {
 			font: 100 55px/50px $font-one;
@@ -187,6 +183,7 @@ h1,h2,h3,h4,h5,h6 {
 		}
 	}
 	a.box--video {
+		overflow: hidden;
 		iframe {
 			position: absolute;
 			top: 0;
@@ -243,18 +240,19 @@ h1,h2,h3,h4,h5,h6 {
 
 
 .service-boxes {
-	background: $light;
 	text-align: center;
 	
 	.service-box {
 		display: inline-block;
+		width: 100%;
 		text-align: center;
 		padding: 40px;
+		background-color: #941134;
+		margin-bottom: 10px;
 
 		.service-icon {
-			color: $brand-primary;
 			a {
-				color: $brand-primary;
+				color: #FFF;
 				text-decoration: none;
 			}
 
@@ -277,7 +275,7 @@ h1,h2,h3,h4,h5,h6 {
 			}
 		}
 		&:hover {
-			background: #941134;
+			background: #FFF;
 			.service-icon{
 				i {
 					color: #FFF;
